--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               color: #0a0a0a;
             "
           >
-            <p>Hi Jonathan, fffffffffff</p>
+            <p>Hi Jonathan,</p>
             <p style="border-bottom: 1px solid #f0f0f0; padding-bottom: 23px">
               The free shipping program you’ve been subscribed to has evolved to
               Gold Primo with much more benefits.
@@ -454,6 +454,35 @@
           </div>
         </td>
       </tr>
+    </table>
+
+    <table
+      style="width: 620px; margin: 0 auto; padding: 0 40px; background: white"
+    >
+      <tbody>
+        <tr>
+          <td>
+            <div style="padding: 10px 14px 10px 14px;
+    border-radius: 35px;
+    border: solid 1px red;">
+              <a href="#"><i class="fa-brands fa-facebook-f"></i>
+            </div>
+            
+          </td>
+          <td>
+            <a href="#"><i class="fa-brands fa-linkedin-in"></i> </a>
+          </td>
+          <td>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+          </td>
+          <td>
+            <a href="#"><i class="fa-brands fa-instagram"></i></i></a>
+          </td>
+          <td>
+            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+          </td>
+        </tr>
+      </tbody>
     </table>
   </body>
 </html>
