--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
             You can manage your subscription and see how much you have saved
             from shipping and cash on delivery fees from your account page.
           </p>
-          <div style="padding: 0 40px; text-align: right; text-align: center">
+          <div style="padding: 0 40px; height: 135px; text-align: center">
             <button
               style="
                 padding: 15px 20px;
@@ -457,29 +457,114 @@
     </table>
 
     <table
-      style="width: 620px; margin: 0 auto; padding: 0 40px; background: white"
+      style="
+        width: 620px;
+        margin: 0 auto;
+        padding: 0 40px;
+        background: white;
+        border-radius: 0 0px 10px 10px;
+      "
     >
       <tbody>
         <tr>
           <td>
-            <div style="padding: 10px 14px 10px 14px;
-    border-radius: 35px;
-    border: solid 1px red;">
-              <a href="#"><i class="fa-brands fa-facebook-f"></i>
+            <div style="width: 271px; margin: 0 auto; height: 52px">
+              <a
+                style="
+                  padding: 6px 10px;
+                  border-radius: 33px;
+                  border: 2px solid #000000;
+                  color: #000000;
+                  margin-right: 17px;
+                "
+                href="#"
+                ><i class="fa-brands fa-facebook-f"></i
+              ></a>
+              <a
+                style="
+                  padding: 7px 10px;
+                  border-radius: 33px;
+                  border: 2px solid #000000;
+                  color: #000000;
+                  margin-right: 17px;
+                "
+                href="#"
+                ><i style="font-size: 13px" class="fa-brands fa-linkedin-in"></i
+              ></a>
+              <a
+                style="
+                  padding: 7px 9px;
+                  border-radius: 33px;
+                  border: 2px solid #000000;
+                  color: #000000;
+                  margin-right: 17px;
+                "
+                href="#"
+                ><i style="font-size: 13px" class="fa-brands fa-twitter"></i
+              ></a>
+              <a
+                style="
+                  padding: 7px 9px;
+                  border-radius: 33px;
+                  border: 2px solid #000000;
+                  color: #000000;
+                  margin-right: 17px;
+                "
+                href="#"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+              <a
+                style="
+                  padding: 7px 8px;
+                  border-radius: 33px;
+                  border: 2px solid #000000;
+                  color: #000000;
+                "
+                href="#"
+                ><i style="font-size: 14px" class="fa-brands fa-youtube"></i
+              ></a>
             </div>
-            
           </td>
-          <td>
-            <a href="#"><i class="fa-brands fa-linkedin-in"></i> </a>
-          </td>
-          <td>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-          </td>
-          <td>
-            <a href="#"><i class="fa-brands fa-instagram"></i></i></a>
-          </td>
-          <td>
-            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+        </tr>
+      </tbody>
+    </table>
+
+    <table
+      style="
+        width: 620px;
+        margin: 0 auto;
+        padding: 0 35px;
+        background: #000000;
+        border-radius: 10px;
+      "
+    >
+      <tbody>
+        <tr>
+          <td style="width: 465px">
+            <p
+              style="
+                font-weight: 400;
+                font-size: 13px;
+                line-height: 18px;
+                color: #f2f2f2;
+                margin-bottom: 0px;
+              "
+            >
+              You're receiving this email because you are a subscriber of
+              NextMockup.com
+            </p>
+            <p
+              style="
+                font-weight: 400;
+                font-size: 13px;
+                line-height: 18px;
+                color: #f2f2f2;
+                margin-top: 2px;
+              "
+            >
+              If you feel you received it by mistake or wish to unsubscribe,
+              <span style="font-weight: 700">click here</span>
+            </p>
           </td>
         </tr>
       </tbody>
