--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="shortcut icon" href="./images/logo.svg" type="favicon" />
     <title>Email templete</title>
   </head>
-  <body style="font-family: 'Open Sans'; background: #c2c0c0">
+  <body style="font-family: 'Open Sans'; background: #c2c0c0; margin: 80px 0">
     <table style="margin: 0 auto; border-spacing: 0px">
       <thead>
         <tr>
