--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <link rel="shortcut icon" href="./images/logo.svg" type="favicon" />
     <title>Email templete</title>
   </head>
-  <body style="font-family: 'Open Sans'; background: #c2c0c0; margin: 80px 0">
+  <body style="font-family: 'Open Sans'; margin: 80px 0">
     <table style="margin: 0 auto; border-spacing: 0px">
       <thead>
         <tr>
           <th
             style="
-              background-image: url(./images/Background.png);
+              background: url(https://i.ibb.co/CMtcXcM/Background.png);
               height: 264px;
               width: 620px;
             "
@@ -68,7 +68,7 @@
         width: 620px;
         margin: 0 auto;
         padding: 0 40px;
-        background: white;
+        background: #fbfbfb;
       "
     >
       <tbody>
@@ -107,25 +107,12 @@
     </table>
 
     <table
-      style="width: 620px; margin: 0 auto; padding: 0 40px; background: white"
+      style="width: 620px; margin: 0 auto; padding: 0 40px; background: #fbfbfb"
     >
       <tbody>
         <tr>
           <td>
-            <svg
-              width="36"
-              height="36"
-              viewBox="0 0 36 36"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M22.5001 3.375H22.4221C21.0744 3.37496 19.9506 3.37492 19.0584 3.49487C18.1167 3.62148 17.2665 3.89998 16.5833 4.58319C15.9001 5.26639 15.6216 6.11659 15.495 7.05828C15.4076 7.70849 15.3839 8.48173 15.3775 9.375H9.39725L9.34579 9.375C8.56 9.37498 7.89133 9.37495 7.33576 9.42895C6.74384 9.48649 6.19477 9.61121 5.66629 9.91043C5.13781 10.2096 4.74837 10.6163 4.3945 11.0943C4.06236 11.5429 3.71835 12.1163 3.31409 12.7901L3.31409 12.7901L3.28761 12.8342L1.39047 15.9961L1.32816 16.0999C0.963436 16.7068 0.675344 17.1863 0.52478 17.7299C0.374215 18.2734 0.374584 18.8328 0.375051 19.5409L0.375104 19.6619V22.5V22.5379C0.375092 23.2046 0.375083 23.7611 0.406259 24.2181C0.438712 24.6937 0.508676 25.143 0.689101 25.5786C1.10776 26.5893 1.91079 27.3923 2.92153 27.811C3.35712 27.9914 3.80641 28.0614 4.28206 28.0938C4.46764 28.1065 4.66966 28.114 4.88882 28.1185C5.07717 30.6388 7.18168 32.625 9.7501 32.625C12.3163 32.625 14.4194 30.6422 14.6109 28.125H19.8893C20.0808 30.6422 22.1839 32.625 24.7501 32.625C27.3171 32.625 29.4207 30.641 29.6111 28.1227C30.5103 28.1165 31.2882 28.093 31.9418 28.0051C32.8835 27.8785 33.7337 27.6 34.4169 26.9168C35.1001 26.2336 35.3786 25.3834 35.5052 24.4417C35.6252 23.5496 35.6251 22.4257 35.6251 21.078V21V10.5V10.422C35.6251 9.07427 35.6252 7.95045 35.5052 7.05828C35.3786 6.11659 35.1001 5.26639 34.4169 4.58319C33.7337 3.89998 32.8835 3.62148 31.9418 3.49487C31.0497 3.37492 29.9258 3.37496 28.5781 3.375H28.5001H22.5001ZM15.3751 12V11.625H9.39725C8.54607 11.625 7.98734 11.6262 7.55343 11.6684C7.14377 11.7082 6.93414 11.7782 6.77486 11.8684C6.61559 11.9586 6.44773 12.1023 6.20282 12.4331C5.94341 12.7835 5.65489 13.262 5.21697 13.9918L3.48707 16.875H10.5001C11.9461 16.875 12.9175 16.8726 13.642 16.7752C14.3342 16.6821 14.6305 16.5213 14.8259 16.3258C15.0214 16.1304 15.1822 15.8341 15.2753 15.1419C15.3727 14.4174 15.3751 13.446 15.3751 12ZM17.6251 12L17.6251 12.078V12.078C17.6251 13.4257 17.6252 14.5496 17.5052 15.4417C17.3786 16.3834 17.1001 17.2336 16.4169 17.9168C15.7337 18.6 14.8835 18.8785 13.9418 19.0051C13.0497 19.1251 11.9258 19.125 10.5781 19.125L10.5001 19.125H2.62731C2.62565 19.2718 2.6251 19.4478 2.6251 19.6619V22.5C2.6251 23.2143 2.62571 23.6937 2.65104 24.0649C2.67568 24.426 2.71989 24.6018 2.76783 24.7175C2.95813 25.177 3.32314 25.542 3.78257 25.7323C3.8983 25.7802 4.07413 25.8244 4.43522 25.8491C4.65836 25.8643 4.92061 25.8706 5.24949 25.8732C5.9846 24.1124 7.72284 22.875 9.7501 22.875C11.7781 22.875 13.5168 24.1133 14.2515 25.875H20.2487C20.9834 24.1133 22.7221 22.875 24.7501 22.875C26.7778 22.875 28.5163 24.1129 29.2511 25.8742C30.295 25.8709 31.0507 25.8547 31.642 25.7752C32.3342 25.6821 32.6305 25.5213 32.8259 25.3258C33.0214 25.1304 33.1822 24.8341 33.2753 24.1419C33.3727 23.4174 33.3751 22.446 33.3751 21V10.5C33.3751 9.05399 33.3727 8.08265 33.2753 7.35809C33.1822 6.6659 33.0214 6.36965 32.8259 6.17418C32.6305 5.9787 32.3342 5.81787 31.642 5.7248C30.9175 5.62739 29.9461 5.625 28.5001 5.625H22.5001C21.0541 5.625 20.0827 5.62739 19.3582 5.7248C18.666 5.81787 18.3698 5.9787 18.1743 6.17418C17.9788 6.36965 17.818 6.6659 17.7249 7.35809C17.6275 8.08264 17.6251 9.05398 17.6251 10.5V12ZM9.7501 25.125C8.30036 25.125 7.1251 26.3003 7.1251 27.75C7.1251 29.1997 8.30036 30.375 9.7501 30.375C11.1999 30.375 12.3751 29.1997 12.3751 27.75C12.3751 26.3003 11.1999 25.125 9.7501 25.125ZM24.7501 25.125C23.3004 25.125 22.1251 26.3003 22.1251 27.75C22.1251 29.1997 23.3004 30.375 24.7501 30.375C26.1999 30.375 27.3751 29.1997 27.3751 27.75C27.3751 26.3003 26.1999 25.125 24.7501 25.125Z"
-                fill="#D8AE5F"
-              />
-            </svg>
+            <img src="https://i.ibb.co/NsNS5KN/truck.jpg" alt="truck" />
           </td>
 
           <td>
@@ -147,7 +134,7 @@
     </table>
 
     <table
-      style="width: 620px; margin: 0 auto; padding: 0 40px; background: white"
+      style="width: 620px; margin: 0 auto; padding: 0 40px; background: #fbfbfb"
     >
       <tr>
         <td>
@@ -169,25 +156,12 @@
     </table>
 
     <table
-      style="width: 620px; margin: 0 auto; padding: 0 40px; background: white"
+      style="width: 620px; margin: 0 auto; padding: 0 40px; background: #fbfbfb"
     >
       <tbody>
         <tr>
           <td>
-            <svg
-              width="35"
-              height="30"
-              viewBox="0 0 35 30"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M20.075 6.59971C22.2001 5.00592 23.6925 3.89031 24.8569 3.25747C26.0287 2.62068 26.5238 2.66531 26.8385 2.82266C27.1532 2.98 27.486 3.34933 27.6796 4.66882C27.8697 5.96432 27.8749 7.79862 27.875 10.4041C27.875 10.4359 27.875 10.4677 27.875 10.4997L27.875 16.4997C27.875 16.5365 27.875 16.5732 27.875 16.6098C27.8749 19.2076 27.8694 21.0375 27.6796 22.3306C27.486 23.6501 27.1532 24.0194 26.8385 24.1768C26.5238 24.3341 26.0287 24.3787 24.8569 23.7419C23.6925 23.1091 22.2001 21.9935 20.075 20.3997L18.125 18.9372L18.125 8.06221L20.075 6.59971ZM30.1163 19.014C30.0996 20.4548 30.0503 21.6724 29.9058 22.6573C29.6848 24.1631 29.1884 25.5174 27.8448 26.1892C26.5011 26.8611 25.1198 26.4456 23.7826 25.7189C22.4555 24.9977 20.8316 23.7797 18.8053 22.2599L18.725 22.1997L16.6253 20.6249L13.625 20.6249L13.625 26.2501C13.625 28.1141 12.114 29.6251 10.25 29.6251C8.38604 29.6251 6.875 28.1141 6.875 26.2501L6.875 20.5366C3.47451 19.9972 0.874998 17.0522 0.874998 13.4999C0.874998 9.56491 4.06497 6.37494 8 6.37494L16.6247 6.37494L18.725 4.79971L18.8053 4.73951L18.8053 4.73949L18.8053 4.73949L18.8053 4.73945C20.8317 3.21966 22.4555 2.00173 23.7826 1.28054C25.1198 0.553812 26.5011 0.138359 27.8448 0.810195C29.1884 1.48203 29.6848 2.8363 29.9058 4.34215C30.0503 5.32707 30.0996 6.54462 30.1163 7.98552C32.6882 8.50336 34.625 10.7754 34.625 13.4998C34.625 16.2241 32.6882 18.4962 30.1163 19.014ZM30.125 16.6827C31.4358 16.2194 32.375 14.9692 32.375 13.4998C32.375 12.0303 31.4358 10.7801 30.125 10.3168C30.125 10.3443 30.125 10.3718 30.125 10.3994L30.125 10.3994L30.125 10.4997L30.125 16.4997L30.125 16.6L30.125 16.6C30.125 16.6277 30.125 16.6552 30.125 16.6827ZM15.875 8.62494L8 8.62494C5.30761 8.62494 3.125 10.8075 3.125 13.4999C3.125 16.1923 5.30761 18.3749 8 18.3749L15.875 18.3749L15.875 8.62494ZM9.125 20.6251L9.125 26.2501C9.125 26.8714 9.62868 27.3751 10.25 27.3751C10.8713 27.3751 11.375 26.8714 11.375 26.2501L11.375 20.6251L9.125 20.6251Z"
-                fill="#D8AE5F"
-              />
-            </svg>
+            <img src="https://i.ibb.co/wJcv1QW/megaphone.jpg" alt="megaphone" />
           </td>
 
           <td>
@@ -209,7 +183,7 @@
     </table>
 
     <table
-      style="width: 620px; margin: 0 auto; padding: 0 40px; background: white"
+      style="width: 620px; margin: 0 auto; padding: 0 40px; background: #fbfbfb"
     >
       <tr>
         <td>
@@ -231,25 +205,12 @@
     </table>
 
     <table
-      style="width: 620px; margin: 0 auto; padding: 0 40px; background: white"
+      style="width: 620px; margin: 0 auto; padding: 0 40px; background: #fbfbfb"
     >
       <tbody>
         <tr>
           <td>
-            <svg
-              width="36"
-              height="36"
-              viewBox="0 0 36 36"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M21.075 9.59972C23.2001 8.00594 24.6925 6.89033 25.8569 6.25749C27.0287 5.6207 27.5238 5.66533 27.8385 5.82267C28.1532 5.98002 28.486 6.34935 28.6796 7.66884C28.8697 8.96434 28.8749 10.7986 28.875 13.4042C28.875 13.4359 28.875 13.4678 28.875 13.4997L28.875 19.4997C28.875 19.5366 28.875 19.5732 28.875 19.6098C28.8749 22.2076 28.8694 24.0375 28.6796 25.3306C28.486 26.6501 28.1532 27.0194 27.8385 27.1768C27.5238 27.3341 27.0287 27.3788 25.8569 26.742C24.6925 26.1091 23.2001 24.9935 21.075 23.3997L19.125 21.9372L19.125 11.0622L21.075 9.59972ZM31.1163 22.014C31.0996 23.4549 31.0503 24.6724 30.9058 25.6573C30.6848 27.1631 30.1884 28.5174 28.8448 29.1892C27.5011 29.8611 26.1198 29.4456 24.7826 28.7189C23.4555 27.9977 21.8316 26.7797 19.8053 25.2599L19.725 25.1997L17.6253 23.625L14.625 23.625L14.625 29.2501C14.625 31.1141 13.114 32.6251 11.25 32.6251C9.38604 32.6251 7.875 31.1141 7.875 29.2501L7.875 23.5366C4.47452 22.9973 1.875 20.0522 1.875 16.5C1.875 12.5649 5.06497 9.37496 9 9.37495L17.6247 9.37496L19.725 7.79972L19.8053 7.73953L19.8053 7.73951L19.8053 7.73951L19.8053 7.73947C21.8317 6.21968 23.4555 5.00174 24.7826 4.28056C26.1198 3.55383 27.5011 3.13838 28.8448 3.81021C30.1884 4.48205 30.6848 5.83632 30.9058 7.34217C31.0503 8.32709 31.0996 9.54464 31.1164 10.9855C33.6882 11.5034 35.625 13.7754 35.625 16.4998C35.625 19.2242 33.6882 21.4962 31.1163 22.014ZM31.125 19.6827C32.4358 19.2194 33.375 17.9693 33.375 16.4998C33.375 15.0303 32.4358 13.7801 31.125 13.3168C31.125 13.3443 31.125 13.3718 31.125 13.3994L31.125 13.3994L31.125 13.4997L31.125 19.4997L31.125 19.6L31.125 19.6001C31.125 19.6277 31.125 19.6552 31.125 19.6827ZM16.875 11.625L9 11.625C6.30761 11.625 4.125 13.8076 4.125 16.5C4.125 19.1923 6.30761 21.375 9 21.375L16.875 21.375L16.875 11.625ZM10.125 23.6251L10.125 29.2501C10.125 29.8715 10.6287 30.3751 11.25 30.3751C11.8713 30.3751 12.375 29.8715 12.375 29.2501L12.375 23.6251L10.125 23.6251Z"
-                fill="#D8AE5F"
-              />
-            </svg>
+            <img src="https://i.ibb.co/t2GWryM/phone.jpg" alt="phone" />
           </td>
 
           <td>
@@ -271,7 +232,7 @@
     </table>
 
     <table
-      style="width: 620px; margin: 0 auto; padding: 0 40px; background: white"
+      style="width: 620px; margin: 0 auto; padding: 0 40px; background: #fbfbfb"
     >
       <tr>
         <td>
@@ -294,25 +255,12 @@
     </table>
 
     <table
-      style="width: 620px; margin: 0 auto; padding: 0 40px; background: white"
+      style="width: 620px; margin: 0 auto; padding: 0 40px; background: #fbfbfb"
     >
       <tbody>
         <tr>
           <td>
-            <svg
-              width="30"
-              height="14"
-              viewBox="0 0 30 14"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M1.5 0.875034C2.12132 0.875034 2.625 1.37871 2.625 2.00003V9.32019C3.38599 8.45225 4.3341 7.441 5.41989 6.4276C8.25482 3.78166 12.2852 0.875034 16.5 0.875034C22.2097 0.875034 25.5347 3.76522 27.3838 6.64168C28.297 8.0622 28.8505 9.47425 29.1763 10.5268C29.3397 11.0549 29.4475 11.4978 29.5151 11.8131C29.5489 11.971 29.5727 12.0973 29.5885 12.1869C29.5964 12.2317 29.6023 12.2674 29.6064 12.2933L29.6113 12.3247L29.6128 12.3347L29.6133 12.3383L29.6135 12.3397C29.6136 12.3404 29.6137 12.3409 28.5 12.5L29.6137 12.3409C29.7016 12.956 29.2742 13.5259 28.6591 13.6137C28.0448 13.7015 27.4756 13.2752 27.3866 12.6614C27.3866 12.6612 27.3866 12.661 27.3865 12.6608L27.3864 12.6602L27.3864 12.6601L27.3863 12.6591L27.3843 12.6466C27.3821 12.6327 27.3783 12.6094 27.3727 12.5773C27.3613 12.5131 27.3427 12.4139 27.315 12.2846C27.2595 12.0257 27.1681 11.6483 27.0269 11.1921C26.7433 10.2758 26.2655 9.06287 25.4912 7.85839C23.9653 5.48485 21.2903 3.12503 16.5 3.12503C13.2148 3.12503 9.74518 5.46841 6.95511 8.07247C5.68703 9.25601 4.6123 10.4429 3.82495 11.375H12C12.6213 11.375 13.125 11.8787 13.125 12.5C13.125 13.1214 12.6213 13.625 12 13.625H1.5C0.87868 13.625 0.375 13.1214 0.375 12.5V2.00003C0.375 1.37871 0.87868 0.875034 1.5 0.875034Z"
-                fill="#D8AE5F"
-              />
-            </svg>
+            <img src="https://i.ibb.co/r3nsmB8/arrow.jpg" alt="arrow" />
           </td>
 
           <td>
@@ -334,7 +282,7 @@
     </table>
 
     <table
-      style="width: 620px; margin: 0 auto; padding: 0 40px; background: white"
+      style="width: 620px; margin: 0 auto; padding: 0 40px; background: #fbfbfb"
     >
       <tr>
         <td>
@@ -356,25 +304,12 @@
     </table>
 
     <table
-      style="width: 620px; margin: 0 auto; padding: 0 40px; background: white"
+      style="width: 620px; margin: 0 auto; padding: 0 40px; background: #fbfbfb"
     >
       <tbody>
         <tr>
           <td>
-            <svg
-              width="36"
-              height="36"
-              viewBox="0 0 36 36"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M23.25 4.125C24.6997 4.125 25.875 5.30025 25.875 6.75C25.875 8.19975 24.6997 9.375 23.25 9.375H19.512L20.5001 6.08148C20.8485 4.92024 21.9173 4.125 23.1297 4.125H23.25ZM28.125 6.75C28.125 7.71648 27.8438 8.61727 27.3586 9.375H28.5C30.7782 9.375 32.625 11.2218 32.625 13.5C32.625 15.3882 31.3564 16.98 29.625 17.4697V25.5V25.578C29.625 26.9257 29.6251 28.0496 29.5051 28.9417C29.3785 29.8834 29.1 30.7336 28.4168 31.4168C27.7336 32.1 26.8834 32.3785 25.9417 32.5051C25.0496 32.6251 23.9257 32.625 22.578 32.625H22.5H18H13.5H13.422C12.0743 32.625 10.9504 32.6251 10.0583 32.5051C9.11659 32.3785 8.26639 32.1 7.58318 31.4168C6.89998 30.7336 6.62147 29.8834 6.49487 28.9417C6.37492 28.0495 6.37495 26.9257 6.375 25.578L6.375 25.5V17.4697C4.64362 16.98 3.375 15.3882 3.375 13.5C3.375 11.2218 5.22183 9.375 7.5 9.375H8.64136C8.15625 8.61727 7.875 7.71648 7.875 6.75C7.875 4.05761 10.0576 1.875 12.75 1.875H12.8703C15.0763 1.875 17.0211 3.32199 17.655 5.43494L18 6.58488L18.345 5.43494C18.9789 3.32199 20.9237 1.875 23.1297 1.875H23.25C25.9424 1.875 28.125 4.05761 28.125 6.75ZM7.5 15.375H16.875V11.625H12.75H7.5C6.46447 11.625 5.625 12.4645 5.625 13.5C5.625 14.5355 6.46447 15.375 7.5 15.375ZM19.125 15.375H28.5C29.5355 15.375 30.375 14.5355 30.375 13.5C30.375 12.4645 29.5355 11.625 28.5 11.625H23.25H19.125V15.375ZM8.625 17.625V25.5C8.625 26.946 8.62739 27.9174 8.7248 28.6419C8.81787 29.3341 8.9787 29.6304 9.17417 29.8258C9.36965 30.0213 9.6659 30.1821 10.3581 30.2752C11.0826 30.3726 12.054 30.375 13.5 30.375H16.875V17.625H8.625ZM19.125 17.625V30.375H22.5C23.946 30.375 24.9174 30.3726 25.6419 30.2752C26.3341 30.1821 26.6304 30.0213 26.8258 29.8258C27.0213 29.6304 27.1821 29.3341 27.2752 28.6419C27.3726 27.9174 27.375 26.946 27.375 25.5V17.625H19.125ZM16.488 9.375L15.4999 6.08148C15.1515 4.92024 14.0827 4.125 12.8703 4.125H12.75C11.3003 4.125 10.125 5.30025 10.125 6.75C10.125 8.19975 11.3003 9.375 12.75 9.375H16.488Z"
-                fill="#D8AE5F"
-              />
-            </svg>
+            <img src="https://i.ibb.co/RcbGjxm/gift.jpg" alt="gift" />
           </td>
 
           <td>
@@ -396,7 +331,7 @@
     </table>
 
     <table
-      style="width: 620px; margin: 0 auto; padding: 0 40px; background: white"
+      style="width: 620px; margin: 0 auto; padding: 0 40px; background: #fbfbfb"
     >
       <tr>
         <td>
@@ -419,7 +354,7 @@
     </table>
 
     <table
-      style="width: 620px; margin: 0 auto; padding: 0 40px; background: white"
+      style="width: 620px; margin: 0 auto; padding: 0 40px; background: #fbfbfb"
     >
       <tr>
         <td>
@@ -461,68 +396,32 @@
         width: 620px;
         margin: 0 auto;
         padding: 0 40px;
-        background: white;
+        background: #fbfbfb;
         border-radius: 0 0px 10px 10px;
       "
     >
       <tbody>
         <tr>
           <td>
-            <div style="width: 271px; margin: 0 auto; height: 52px">
-              <a
-                style="
-                  padding: 6px 10px;
-                  border-radius: 33px;
-                  border: 2px solid #000000;
-                  color: #000000;
-                  margin-right: 17px;
-                "
-                href="#"
-                ><i class="fa-brands fa-facebook-f"></i
-              ></a>
-              <a
-                style="
-                  padding: 7px 10px;
-                  border-radius: 33px;
-                  border: 2px solid #000000;
-                  color: #000000;
-                  margin-right: 17px;
-                "
-                href="#"
-                ><i style="font-size: 13px" class="fa-brands fa-linkedin-in"></i
-              ></a>
-              <a
-                style="
-                  padding: 7px 9px;
-                  border-radius: 33px;
-                  border: 2px solid #000000;
-                  color: #000000;
-                  margin-right: 17px;
-                "
-                href="#"
-                ><i style="font-size: 13px" class="fa-brands fa-twitter"></i
-              ></a>
-              <a
-                style="
-                  padding: 7px 9px;
-                  border-radius: 33px;
-                  border: 2px solid #000000;
-                  color: #000000;
-                  margin-right: 17px;
-                "
-                href="#"
-                ><i class="fa-brands fa-instagram"></i
-              ></a>
-              <a
-                style="
-                  padding: 7px 8px;
-                  border-radius: 33px;
-                  border: 2px solid #000000;
-                  color: #000000;
-                "
-                href="#"
-                ><i style="font-size: 14px" class="fa-brands fa-youtube"></i
-              ></a>
+            <div style="width: 271px; margin: 0 auto; height: 74px">
+              <a style="text-decoration: none; margin-right: 10px" href="#">
+                <img src="https://i.ibb.co/kqGxLnq/fb.png" alt="fb-icon" />
+              </a>
+              <a style="text-decoration: none; margin-right: 10px" href="#">
+                <img
+                  src="https://i.ibb.co/dppXX2W/linkedin.png"
+                  alt="linkedin"
+                />
+              </a>
+              <a style="text-decoration: none; margin-right: 10px" href="#">
+                <img src="https://i.ibb.co/y6CG5V4/tw.png" alt="twiiter" />
+              </a>
+              <a style="text-decoration: none; margin-right: 10px" href="#">
+                <img src="https://i.ibb.co/XxpNyxV/insta-3.png" alt="insta" />
+              </a>
+              <a style="text-decoration: none" href="#">
+                <img src="https://i.ibb.co/4Sy7w9J/youtube.png" alt="youtube" />
+              </a>
             </div>
           </td>
         </tr>
